fix: dark mode

--- a/themes/themer/assets/css/tailwind.css
+++ b/themes/themer/assets/css/tailwind.css
@@ -12,6 +12,9 @@
   h2 {
     @apply text-xl;
   }
+  a:hover {
+    @apply text-blue-400;
+  }
 }
 
 body {
